index Layout update

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -12,8 +12,15 @@
 <body>
     <div class="container">
         <div class="jumboton">
-            <h1 class="text-center"></h1>
-
+            <h1 class="text-center">Hot Restaurant</h1>
+            <hr>
+            <h2 class="text-center">We are at limited capacity with COVID restrictions. Please make a reservation to
+                help us serve you better.</h2>
+            <br>
+            <div class="text-center">
+                <a href="./tables.html"><button type="button" class="btn btn-lg btn-info">Tables</button></a>
+                <a href="./reserve.html"><button type="button" class="btn btn-lg btn-primary">Reserve</button></a>
+            </div>
         </div>
     </div>
 
