--- a/Develop/index.html
+++ b/Develop/index.html
@@ -14,8 +14,9 @@
         <div class="jumboton">
             <h1 class="text-center">Hot Restaurant</h1>
             <hr>
-            <h2 class="text-center">We are at limited capacity with COVID restrictions. Please make a reservation to
-                help us serve you better.</h2>
+            <h2 class="text-center">We are at limited capacity with COVID restrictions. <P>Please make a reservation to
+                    help us serve you better.</P>
+            </h2>
             <br>
             <div class="text-center">
                 <a href="./tables.html"><button type="button" class="btn btn-lg btn-info">Tables</button></a>
@@ -24,7 +25,11 @@
         </div>
     </div>
 
-
+    <footer class="footer">
+        <div class="container">
+            <p><a href="./tables.html">API Table Link</a> | <a href="./reserve.html">API Wait List</a></p>
+        </div>
+    </footer>
 
 
 
